Closed Bug 21352 Opened 25 years ago Closed 25 years ago

[PP][CRASH][DOGFOOD] Crash in GKGFXWIN.DLL at launch

Categories

(Core :: Internationalization, defect, P1)

x86
Windows 95
defect

Tracking

()

VERIFIED FIXED

People

(Reporter: cpratt, Assigned: erik)

References

Details

(Whiteboard: [PDT+] have fix; awaiting check-in approval)

Build ID: 1999120908
Platform: Windows 95 (Japanese) with Y2K updates ad updated VC6 .DLLs; using a
Matrox Millennium II driver OR an Oak Technology generic SVGA driver. See
teruko@netscape.com for information on how to find this machine.

To reproduce:
- Download, install, and launch either the commercial or Mozilla build of the
5.0 browser.
- Delete the Users50 folder and mozillaregistry.dat.
- At the command prompt, type mozilla.exe.

Result: You crash. The console says:

*** QfaServices is being registered
nNCL: registering deferred (0)
WEBSHELL+ = 1

The crash message details say:

MOZILLA のページ違反です。
モジュール : GKGFXWIN.DLL、アドレス : 0137:609398b7
Registers:
EAX=0000000c CS=0137 EIP=609398b7 EFLGS=00010202
EBX=017979d0 SS=013f ESP=0063e84c EBP=0063e878
ECX=01790001 DS=013f ESI=01797780 FS=24ff
EDX=006e616d ES=013f EDI=01797690 GS=0000
Bytes at CS:EIP:
8a 04 10 d2 e8 a8 01 74 04 8b c7 eb 02 33 c0 5f
Stack dump:
0063eaac 017979d0 00000061 60939910 00000e1e 00000061 0063e884 007af7f0 0063e8cc
000001ce 00000e1e 0063e8cc 609144ac 007af810 00000000 0066a474

That's all the information I have.
Whiteboard: [PDT+]
Putting on the PDT+ radar.
Changing QA contact; Jan, can you reassign for engineering?
QA Contact: leger → teruko
I tested this under Win95US and Win95 chinese.  This does not happen.
I tested this under Win95Japanese in IQA lab.  Mozilla.exe does nto launch.
Assignee: leger → ftang
Component: Browser-General → Internationalization
Status: NEW → ASSIGNED
The informaiotn is not enough for any debugging. Is that possible you can give
me a stack trace ?.
*** Bug 21420 has been marked as a duplicate of this bug. ***
Frank, before talkeback is enabled, it crashes.  So, we cannot get stacktrace.
Assignee: ftang → erik
Status: ASSIGNED → NEW
Priority: P3 → P1
Whiteboard: [PDT+] → [PDT+] have fix
Target Milestone: M12
Whiteboard: [PDT+] have fix → [PDT+] have fix; review/checkin by 12/13
Status: NEW → ASSIGNED
Whiteboard: [PDT+] have fix; review/checkin by 12/13 → [PDT+] no fix yet; erik working on it
Whiteboard: [PDT+] no fix yet; erik working on it → [PDT+] erik hopes to have fix 12/14
Whiteboard: [PDT+] erik hopes to have fix 12/14 → [PDT+] have fix; awaiting check-in approval
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Status: RESOLVED → VERIFIED
I verified this in 121508 Win32 build under Windows 95J.
Blocks: 22176
No longer blocks: 22176
You need to log in before you can comment on or make changes to this bug.