bug 21352; was crashing on Japanese Win95 since we didn't keep our subclass for that platform in sync with the base class; r=ftang a=chofmann